syntax = "proto3";

package events;

option go_package = "./events";

message Event {
    string id = 1;
    string title = 2;
    string description = 3;
    string startTime = 4;
    string endTime = 5;
    string location = 6;
    repeated string attendees = 7;
}

message CreateEventRequest {
    Event event = 1;
}

message CreateEventResponse {
    bool success = 1;
    string message = 2;
}

message UpdateEventRequest {
    string id = 1;
    Event event = 2;
}

message UpdateEventResponse {
    bool success = 1;
    string message = 2;
}

message DeleteEventRequest {
    string id = 1;
}

message DeleteEventResponse {
    bool success = 1;
    string message = 2;
}

message EventsForDayRequest {
    string day = 1;
}

message EventsForDayResponse {
    repeated Event events = 1;
}

message EventsForWeekRequest {
    string startOfWeek = 1;
    string endOfWeek = 2;
}

message EventsForWeekResponse {
    repeated Event events = 1;
}

message EventsForMonthRequest {
    string month = 1;
    string year = 2;
}

message EventsForMonthResponse {
    repeated Event events = 1;
}

service EventService {
    rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse);
    rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse);
    rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse);
    rpc EventsForDay (EventsForDayRequest) returns (EventsForDayResponse);
    rpc EventsForWeek (EventsForWeekRequest) returns (EventsForWeekResponse);
    rpc EventsForMonth (EventsForMonthRequest) returns (EventsForMonthResponse);
}

